@@ -1,3 +1,7 @@
+2001-06-05  Tambet Ingo  <tambet@ximian.com>
+
+	* users-conf.in (change_user_chfn): Little fix.
+
 2001-06-04  Hans Petter Jansson  <hpj@ximian.com>
 
 	* disks-conf.in (get_fdisk): Know more about extended partitions.
